<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background ="@drawable/cinema10"
    >


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="49dp"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="165dp"
        android:drawableLeft="@drawable/ic_action_username"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_action_username"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/username"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_name"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_action_username"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/address"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_action_home"
        android:ems="10"
        android:hint="@string/adress"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_registration"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="76dp"
        android:background="@color/colorPrimary"
        android:text="@string/registration"
        android:textColor="@color/colorText" />


    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:clickable="true"
        android:linksClickable="true"
        android:text="@string/already_registred"
        android:textColor="@android:color/black"
        android:textSize="18sp" />


    <Spinner
        android:id="@+id/city"
        android:layout_width="208dp"
        android:layout_height="37dp"
        android:layout_below="@+id/address"
        android:layout_centerHorizontal="true"
        android:entries="@array/cities" />


</RelativeLayout>