<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservedShowDetailsFragment"
    android:background="@drawable/cinema10">
    
    <ImageView
        android:id="@+id/show_image"
        android:layout_width="match_parent"
        android:scaleType="fitXY"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/show_name_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_image"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/show_duration_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/show_name_heading">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_duration_label"
            android:textSize="18sp"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/show_duration_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="italic"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/show_duration_row"
        android:paddingTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_label"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/time_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/date_row">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_label"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/hall_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/time_row">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hall_label"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/hall_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/facility_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/hall_row">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facility_label"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/facility_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/num_of_seats_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/facility_row">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_of_seats_label"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/num_of_seats_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/total_price_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/num_of_seats_row">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price_label"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/total_price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_cancel_reservation"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="66dp"
        android:background="@color/colorPrimary"
        android:text="@string/cancel_reservation"
        android:textColor="@color/colorText" />


    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/total_price_row"
        android:clickable="true"
        android:isIndicator="false"
        android:numStars="5"
        android:stepSize="1" />
    <Button
        android:id="@+id/button_rating"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="66dp"
        android:layout_below="@+id/rating_bar"
        android:background="@color/colorPrimary"
        android:text="@string/rating_button"
        android:textColor="@color/colorText" />

</RelativeLayout>
