<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeatReserveFragment"
    android:background="@drawable/cinema10">


<TextView
    android:id="@+id/show_name_heading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/show_image"
    android:textSize="25sp"
    android:gravity="center"
    android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/date_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/show_duration_row"
        android:paddingTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_label"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/time_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/date_row">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_label"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/hall_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/time_row">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hall_label"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/hall_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>


    </LinearLayout>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hall_row"
        android:columnWidth="50dp"
        android:numColumns="5"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:verticalSpacing="7dp"
        android:horizontalSpacing="7dp"
        android:gravity="center"
        android:background="@color/colorText"
        />

    <Button
        android:id="@+id/button_confirm_reservation"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/confirm_reservation"
        android:textColor="@color/colorText" />


</RelativeLayout>